cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__collection_command@stdout-Collection { command: Get { id: "01J1K5B6RJ84WJXCWYJ5WNE12E" } }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(Collection { id: Thing { tb: "collection", id: String("01J1K5B6RJ84WJXCWYJ5WNE12E") }, name: "Collection 0", runtime: 180s, song_count: 1 })
