cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers::smoke_tests::test_playback_command::case_17@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
repeat mode set to None
